fix paragraph spacing

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -738,7 +738,8 @@ span, .progress-title {
 
 
 .resume li, p{
-    font-size: 14px;  
+    font-size: 14px; 
+    margin-bottom:5px;
 }
 
 /*
